--- a/App/Views/Home/Secret.cshtml
+++ b/App/Views/Home/Secret.cshtml
@@ -1,3 +1,13 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService _authorizationService
+
+@{
     <h1>Secret</h1>
+
+    var authorizationResult = await _authorizationService.AuthorizeAsync(User, "Claim.Hu3");
+
+    if (authorizationResult.Succeeded)
+    {
+        <h2>User tem o Claim "Claim.Hu3"</h2>
+    }
 }
