User.Identity.IsAuthenticated

--- a/App/Views/Home/Secret.cshtml
+++ b/App/Views/Home/Secret.cshtml
@@ -4,6 +4,11 @@
 @{
     <h1>Secret</h1>
 
+    if (User.Identity is not null && User.Identity.IsAuthenticated)
+    {
+        <h2>User Athenticated</h2>        
+    }
+
     var authorizationResult = await _authorizationService.AuthorizeAsync(User, "Claim.Hu3");
 
     if (authorizationResult.Succeeded)
